SERVER-50205 fix corruptDocumentOnInsert fail point